fixed sidebar layout bug of too much padding on right of edit content when viewport is medium sized

--- a/international/carte_interactive/static/carte_interactive/css/style.css
+++ b/international/carte_interactive/static/carte_interactive/css/style.css
@@ -21,8 +21,6 @@
 
 /* Sidebar Styles */
 .sidebar-nav {
-  position: absolute;
-  top: 0;
   margin: 0;
   padding: 0;
   list-style: none; }
